feat: help block added

--- a/shelter/main.html
+++ b/shelter/main.html
@@ -7,6 +7,7 @@
 - картинка шума должна быть в масштабе 1.1
 - обводка в подзаголовке лого
 - стрелки внутри кнопок в петс
+- в хелп возможно есть незаметное отличие от орига
 -->
 <head>
   <meta charset="UTF-8">
@@ -81,43 +82,43 @@
     </section>
     <section class="help">
       <div class="help-content">
-        <h3>How you can help our shelter</h3>
+        <h3 class="help-heading">How you can help our shelter</h3>
         <div class="list">
           <div class="list-item">
-            <img>
-            <p></p>
+            <img class="list-img" src="imgs/icon-pet-food.svg" alt="pet-food">
+            <h4 class="list-text">Pet food</h4>
           </div>
           <div class="list-item">
-            <img>
-            <p></p>
+            <img class="list-img" src="imgs/icon-transportation.svg" alt="transportation">
+            <h4 class="list-text">Transportation</h4>
           </div>
           <div class="list-item">
-            <img>
-            <p></p>
+            <img class="list-img" src="imgs/icon-toys.svg" alt="toys">
+            <h4 class="list-text">Toys</h4>
           </div>
           <div class="list-item">
-            <img>
-            <p></p>
+            <img class="list-img" src="imgs/icon-bowls-and-cups.svg" alt="bowls-and-cups">
+            <h4 class="list-text">Bowls and cups</h4>
           </div>
           <div class="list-item">
-            <img>
-            <p></p>
+            <img class="list-img" src="imgs/icon-shampoos.svg" alt="shampoos">
+            <h4 class="list-text">Shampoos</h4>
           </div>
           <div class="list-item">
-            <img>
-            <p></p>
+            <img class="list-img" src="imgs/icon-vitamins.svg" alt="vitamins">
+            <h4 class="list-text">Vitamins</h4>
           </div>
           <div class="list-item">
-            <img>
-            <p></p>
+            <img class="list-img" src="imgs/icon-medicines.svg" alt="medicines">
+            <h4 class="list-text">Medicines</h4>
           </div>
           <div class="list-item">
-            <img>
-            <p></p>
+            <img class="list-img" src="imgs/icon-collars-leashes.svg" alt="collars-leashes">
+            <h4 class="list-text">Collars / leashes</h4>
           </div>
           <div class="list-item">
-            <img>
-            <p></p>
+            <img class="list-img" src="imgs/icon-sleeping-area.svg" alt="sleeping-area">
+            <h4 class="list-text">Sleeping areas</h4>
           </div>
         </div>
       </div>
