feat: donation block

--- a/shelter/main.html
+++ b/shelter/main.html
@@ -8,6 +8,7 @@
 - обводка в подзаголовке лого
 - стрелки внутри кнопок в петс
 - в хелп возможно есть незаметное отличие от орига
+- доделать футер
 -->
 <head>
   <meta charset="UTF-8">
@@ -125,21 +126,37 @@
     </section>
     <section class="donation">
       <div class="donation-content">
-        <img>
-        <div class="content">
-          <h3>You can also make a donation</h3>
-          <h5>Name of the bank / Type of bank account</h5>
-          <div>
-            <img src="imgs/credit-card.svg">
-            <h4>8380 2880 8028 8791 7435</h4>
+        <img class="donation-img" src="imgs/donation-dog.png" alt="donation-dog">
+        <div class="donation-inner-content">
+          <h3 class="donation-heading">You can also <br>make a donation</h3>
+          <h5 class="donation-subheading">Name of the bank / Type of bank account</h5>
+          <div class="credit-card-container">
+            <img class="icon-credit-card" src="imgs/credit-card.svg" alt="icon-credit-card">
+            <h4 class="credit-card-number">8380 2880 8028 8791 7435</h4>
           </div>
-          <p>Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+          <p class="donation-info">Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
         </div>
       </div>
     </section>
   </main>
   <footer class="footer">
-
+    <div class="footer-container">
+      <div class="footer-contacts">
+        <p></p>
+        <div>
+          <img>
+          <p></p>
+        </div>
+        <div>
+          <img>
+          <p></p>
+        </div>
+      </div>
+      <div class="footer-location">
+        
+      </div>
+      <img class="footer-puppy" src="" alt="footer-puppy">
+    </div>
   </footer>
 </body>
 </html>
