feat: added footer, but whole site differs from the original a little

--- a/shelter/main.html
+++ b/shelter/main.html
@@ -8,7 +8,8 @@
 - обводка в подзаголовке лого
 - стрелки внутри кнопок в петс
 - в хелп возможно есть незаметное отличие от орига
-- доделать футер
+- что-от не так с текстом - толи он не такой длины толи толще, везде микро отличия
+- карточки с животными отличаются от орига
 -->
 <head>
   <meta charset="UTF-8">
@@ -142,20 +143,28 @@
   <footer class="footer">
     <div class="footer-container">
       <div class="footer-contacts">
-        <p></p>
-        <div>
-          <img>
-          <p></p>
+        <h3 class="footer-heading">For questions and suggestions</h3>
+        <div class="footer-inner-container">
+          <img class="footer-icon" src="imgs/icon-email.svg" alt="icon-email">
+          <h4 class="footer-info">email@shelter.com</h4>
         </div>
-        <div>
-          <img>
-          <p></p>
+        <div class="footer-inner-container">
+          <img class="footer-icon" src="imgs/icon-phone.svg" alt="icon-phone">
+          <h4 class="footer-info">+13 674 567 75 54</h4>
         </div>
       </div>
       <div class="footer-location">
-        
+        <h3 class="footer-heading">We are waiting for your visit</h3>
+        <div class="footer-inner-container">
+          <img class="footer-icon" src="imgs/icon-marker.svg" alt="icon-marker">
+          <h4 class="footer-info">1 Central Street, Boston (entrance from the store)</h4>
+        </div>
+        <div class="footer-inner-container">
+          <img class="footer-icon" src="imgs/icon-marker.svg" alt="icon-marker">
+          <h4 class="footer-info">18 South Park, London </h4>
+        </div>
       </div>
-      <img class="footer-puppy" src="" alt="footer-puppy">
+      <img class="footer-puppy" src="imgs/footer-puppy.png" alt="footer-puppy">
     </div>
   </footer>
 </body>
