fix: visually (almost) like an original, some minor margins

--- a/shelter/main.html
+++ b/shelter/main.html
@@ -10,6 +10,7 @@
 - в хелп возможно есть незаметное отличие от орига
 - что-от не так с текстом - толи он не такой длины толи толще, везде микро отличия
 - карточки с животными отличаются от орига
+- в pets карточки в отдельный контейнер
 -->
 <head>
   <meta charset="UTF-8">
@@ -34,7 +35,7 @@
     <section class="not-only">
       <div class="not-only-content">
         <div class="not-only-inner-content">
-          <h2 class='not-only-title'>Not only people need a house</h2>
+          <h1 class='not-only-title'>Not only people need a house</h1>
           <p class='not-only-subtitle p-l'>We offer to give a chance to a little and nice puppy with 
             an extremely wide and open heart. He or she will love you more 
             than anybody else in the world, you will see!</p>
@@ -66,12 +67,12 @@
             <button class="card-button">Learn more</button>
           </div>
           <div class="card">
-            <img src="imgs/pets-jennifer.png" alt="jennifer">
+            <img class="card-image" src="imgs/pets-jennifer.png" alt="jennifer">
             <p class="card-text">Jennifer</p>
             <button class="card-button">Learn more</button>
           </div>
           <div class="card">
-            <img src="imgs/pets-woody.png" alt="woody">
+            <img class="card-image" src="imgs/pets-woody.png" alt="woody">
             <p class="card-text">Woody</p>
             <button class="card-button">Learn more</button>
           </div>
@@ -157,11 +158,11 @@
         <h3 class="footer-heading">We are waiting for your visit</h3>
         <div class="footer-inner-container">
           <img class="footer-icon" src="imgs/icon-marker.svg" alt="icon-marker">
-          <h4 class="footer-info">1 Central Street, Boston (entrance from the store)</h4>
+          <h4 class="footer-location-info">1 Central Street, Boston (entrance from the store)</h4>
         </div>
         <div class="footer-inner-container">
-          <img class="footer-icon" src="imgs/icon-marker.svg" alt="icon-marker">
-          <h4 class="footer-info">18 South Park, London </h4>
+          <img class="footer-loc-icon" src="imgs/icon-marker.svg" alt="icon-marker">
+          <h4 class="footer-location-info">18 South Park, London </h4>
         </div>
       </div>
       <img class="footer-puppy" src="imgs/footer-puppy.png" alt="footer-puppy">
