--- a/shelter/main.html
+++ b/shelter/main.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <!--
-- градиент отличается
-- картинка шума не в том масштабе (1.1?)
-- фон должен продлятся по всей странице
 - 6ой пункт в перечне ссылочных связей (куча ссылок в футер)
 - ссылка на our pets и кнопка get to know the rest
 - перепроверить потом все пункты перечня ссылочных связей
@@ -153,32 +150,33 @@
     </section>
   </main>
   <footer class="footer" id="footer">
-    <div class="wrap"><div class="footer-container">
-      <div class="footer-contacts">
-        <h3 class="footer-heading">For questions and suggestions</h3>
-        <div class="footer-inner-container">
-          <img class="footer-icon" src="imgs/icon-email.svg" alt="icon-email">
-          <h4 class="footer-info">email@shelter.com</h4>
+    <div class="wrap">
+      <div class="footer-container">
+        <div class="footer-contacts">
+          <h3 class="footer-heading">For questions and suggestions</h3>
+          <div class="footer-inner-container">
+            <img class="footer-icon" src="imgs/icon-email.svg" alt="icon-email">
+            <h4 class="footer-info">email@shelter.com</h4>
+          </div>
+          <div class="footer-inner-container">
+            <img class="footer-icon" src="imgs/icon-phone.svg" alt="icon-phone">
+            <h4 class="footer-info">+13 674 567 75 54</h4>
+          </div>
         </div>
-        <div class="footer-inner-container">
-          <img class="footer-icon" src="imgs/icon-phone.svg" alt="icon-phone">
-          <h4 class="footer-info">+13 674 567 75 54</h4>
+        <div class="footer-location">
+          <h3 class="footer-heading">We are waiting for your visit</h3>
+          <div class="footer-inner-container">
+            <img class="footer-icon" src="imgs/icon-marker.svg" alt="icon-marker">
+            <h4 class="footer-location-info">1 Central Street, Boston (entrance from the store)</h4>
+          </div>
+          <div class="footer-inner-container">
+            <img class="footer-loc-icon" src="imgs/icon-marker.svg" alt="icon-marker">
+            <h4 class="footer-location-info">18 South Park, London </h4>
+          </div>
         </div>
+        <img class="footer-puppy" src="imgs/footer-puppy.png" alt="footer-puppy">
       </div>
-      <div class="footer-location">
-        <h3 class="footer-heading">We are waiting for your visit</h3>
-        <div class="footer-inner-container">
-          <img class="footer-icon" src="imgs/icon-marker.svg" alt="icon-marker">
-          <h4 class="footer-location-info">1 Central Street, Boston (entrance from the store)</h4>
-        </div>
-        <div class="footer-inner-container">
-          <img class="footer-loc-icon" src="imgs/icon-marker.svg" alt="icon-marker">
-          <h4 class="footer-location-info">18 South Park, London </h4>
-        </div>
-      </div>
-      <img class="footer-puppy" src="imgs/footer-puppy.png" alt="footer-puppy">
     </div>
-  </div>
   </footer>
 </body>
 </html>
