--- a/shelter/our-pets.html
+++ b/shelter/our-pets.html
@@ -18,45 +18,100 @@
 </head>
 <body>
   <header class="header">
-    <div class="header-title">
-      <a class="header-main-title">Cozy House</a>
-      <p class="header-subtitle">Shelter for pets in Boston</p>
+    <div class="header-wrap">
+      <div class="header-title">
+        <a class="header-main-title">Cozy House</a>
+        <p class="header-subtitle">Shelter for pets in Boston</p>
+      </div>
+      <nav class="header-links">
+        <a class="header-link" id="active-link">About the shelter</a>
+        <a class="header-link" href="our-pets.html">Our pets</a>
+        <a class="header-link" href="#help">Help the shelter</a>
+        <a class="header-link" href="#footer">Contacts</a>
+      </nav>
     </div>
-    <nav class="header-links">
-      <a class="header-link" id="active-link">About the shelter</a>
-      <a class="header-link">Our pets</a>
-      <a class="header-link" href="#help">Help the shelter</a>
-      <a class="header-link" href="#footer">Contacts</a>
-    </nav>
   </header>
-  <main>
+  <main class="main">
+    <div class="wrap">
+      <div class="main-content">
+        <h1 class="main-heading">Our friends who<br> are looking for a house</h1>
+        <div class="main-container">
+          <div class="card-container">
+            <div class="card">
+              <img class="card-image" src="imgs/pets-katrine.png" alt="katrine">
+              <p class="card-text">Katrine</p>
+              <button class="card-button">Learn more</button>
+            </div>
+            <div class="card">
+              <img class="card-image" src="imgs/pets-jennifer.png" alt="jennifer">
+              <p class="card-text">Jennifer</p>
+              <button class="card-button">Learn more</button>
+            </div>
+            <div class="card">
+              <img class="card-image" src="imgs/pets-woody.png" alt="woody">
+              <p class="card-text">Woody</p>
+              <button class="card-button">Learn more</button>
+            </div>
+            <div class="card">
+              <img class="card-image" src="imgs/pets-sophia.png" alt="sophia">
+              <p class="card-text">Sophia</p>
+              <button class="card-button">Learn more</button>
+            </div>
+            <div class="card">
+              <img class="card-image" src="imgs/pets-timmy.png" alt="timmy">
+              <p class="card-text">Timmy</p>
+              <button class="card-button">Learn more</button>
+            </div>
+            <div class="card">
+              <img class="card-image" src="imgs/pets-charly.png" alt="charly">
+              <p class="card-text">Charly</p>
+              <button class="card-button">Learn more</button>
+            </div>
+            <div class="card">
+              <img class="card-image" src="imgs/pets-scarlet.png" alt="scarlet">
+              <p class="card-text">Scarlett</p>
+              <button class="card-button">Learn more</button>
+            </div>
+            <div class="card">
+              <img class="card-image" src="imgs/pets-freddie.png" alt="freddie">
+              <p class="card-text">Freddie</p>
+              <button class="card-button">Learn more</button>
+            </div>
+          </div>
+          <div class="pagination-container">
 
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
   <footer class="footer" id="footer">
-    <div class="footer-container">
-      <div class="footer-contacts">
-        <h3 class="footer-heading">For questions and suggestions</h3>
-        <div class="footer-inner-container">
-          <img class="footer-icon" src="imgs/icon-email.svg" alt="icon-email">
-          <h4 class="footer-info">email@shelter.com</h4>
+    <div class="wrap">
+      <div class="footer-container">
+        <div class="footer-contacts">
+          <h3 class="footer-heading">For questions and suggestions</h3>
+          <div class="footer-inner-container">
+            <img class="footer-icon" src="imgs/icon-email.svg" alt="icon-email">
+            <h4 class="footer-info">email@shelter.com</h4>
+          </div>
+          <div class="footer-inner-container">
+            <img class="footer-icon" src="imgs/icon-phone.svg" alt="icon-phone">
+            <h4 class="footer-info">+13 674 567 75 54</h4>
+          </div>
         </div>
-        <div class="footer-inner-container">
-          <img class="footer-icon" src="imgs/icon-phone.svg" alt="icon-phone">
-          <h4 class="footer-info">+13 674 567 75 54</h4>
+        <div class="footer-location">
+          <h3 class="footer-heading">We are waiting for your visit</h3>
+          <div class="footer-inner-container">
+            <img class="footer-icon" src="imgs/icon-marker.svg" alt="icon-marker">
+            <h4 class="footer-location-info">1 Central Street, Boston (entrance from the store)</h4>
+          </div>
+          <div class="footer-inner-container">
+            <img class="footer-loc-icon" src="imgs/icon-marker.svg" alt="icon-marker">
+            <h4 class="footer-location-info">18 South Park, London </h4>
+          </div>
         </div>
+        <img class="footer-puppy" src="imgs/footer-puppy.png" alt="footer-puppy">
       </div>
-      <div class="footer-location">
-        <h3 class="footer-heading">We are waiting for your visit</h3>
-        <div class="footer-inner-container">
-          <img class="footer-icon" src="imgs/icon-marker.svg" alt="icon-marker">
-          <h4 class="footer-location-info">1 Central Street, Boston (entrance from the store)</h4>
-        </div>
-        <div class="footer-inner-container">
-          <img class="footer-loc-icon" src="imgs/icon-marker.svg" alt="icon-marker">
-          <h4 class="footer-location-info">18 South Park, London </h4>
-        </div>
-      </div>
-      <img class="footer-puppy" src="imgs/footer-puppy.png" alt="footer-puppy">
     </div>
   </footer>
 </body>
