--- a/shelter/main.html
+++ b/shelter/main.html
@@ -16,8 +16,10 @@
   <header class="header">
     <div class="header-wrap">
       <div class="header-title">
-        <a class="header-main-title">Cozy House</a>
-        <p class="header-subtitle">Shelter for pets in Boston</p>
+        <a href="#" class="header-main-title-link">
+          <p class="header-main-title" href="#">Cozy House</p>
+          <p class="header-subtitle">Shelter for pets in Boston</p>
+        </a>
       </div>
       <nav class="header-links">
         <a class="header-link" id="active-link">About the shelter</a>
@@ -36,7 +38,9 @@
             <p class='not-only-subtitle p-l'>We offer to give a chance to a little and nice puppy with 
               an extremely wide and open heart. He or she will love you more 
               than anybody else in the world, you will see!</p>
-            <button class='not-only-button' onclick="window.location.href='#pets'">Make a friend</button>
+              <a href="#pets" class="header-link">
+                <button class='not-only-button'>Make a friend</button>
+              </a>
           </div>
           <img class='not-only-puppy' src="imgs/start-screen-puppy.png" alt="puppy">
         </div>
@@ -83,7 +87,9 @@
               <img class="pets-slider-right" src="imgs/Arrow-r.svg" alt="">
             </button>
           </div>
-          <button class="pets-main-button">Get to know the rest</button>
+          <a href="our-pets.html" class="pets-main-button-link">
+            <button class="pets-main-button">Get to know the rest</button>
+          </a>
         </div>
       </div>
     </section>
@@ -141,7 +147,7 @@
             <h5 class="donation-subheading">Name of the bank / Type of bank account</h5>
             <div class="credit-card-container">
               <img class="icon-credit-card" src="imgs/credit-card.svg" alt="icon-credit-card">
-              <a class="credit-card-number">8380 2880 8028 8791 7435</a>
+              <a class="credit-card-number" href="#">8380 2880 8028 8791 7435</a>
             </div>
             <p class="donation-info">Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
           </div>
